Agrego create gifos y my gifos

--- a/index.html
+++ b/index.html
@@ -207,9 +207,34 @@
 			<section class="miGifos hidden">
 				<img src="assets/mobile/icon-mis-gifos.svg" alt="mi gifos icon" />
 				<h2 class="miGifos__title">Mis GIFOS</h2>
-				<div class="miGifos__gifs">mi gifos placeholder</div>
-				<button class="miGifos__btn">VER MÁS</button>
+				<div class="miGifos__empty hidden" id="miGifos__empty">
+					<img src="assets/mobile/icon-mis-gifos-sin-contenido.svg" alt="icon mi gifos">
+					<h3>¡Anímate a crear tu primer GIFO!</h3>
+				</div>
+				<div class="miGifos__gifs">
+					<div class="miGifos__gifs__gallery" id="miGifos__gifs__gallery">
+						<!-- Gifos created by user -->
+					</div>
+				</div>
 			</section>
+
+			<!-- <section class="topContainers hidden" id="misGifosSection">
+
+				<img src="assets/icon-mis-gifos.svg" alt="Imagen decorativa">
+				<h2 class="title">Mis GIFOS</h2>
+		
+				<section class="empty__container" id="noGif_container">
+					<img class="empty__image" src="assets/icon-mis-gifos-sin-contenido.svg" alt="Imagen decorativa">
+					<h3 class="empty__text">¡Anímate a crear tu primer GIFO!</h3>
+				</section>
+		
+				<div class="searchResult">
+					<div class="searchResult__gallery" id="misGifos-container">
+						
+					</div>
+				</div>
+		
+			</section> -->
 			<!-- FINISH MI GIFOS SECTION -->
 
 			<!-- STARTS TRENDING GIFS SECTION -->
