--- a/index.html
+++ b/index.html
@@ -217,24 +217,6 @@
 					</div>
 				</div>
 			</section>
-
-			<!-- <section class="topContainers hidden" id="misGifosSection">
-
-				<img src="assets/icon-mis-gifos.svg" alt="Imagen decorativa">
-				<h2 class="title">Mis GIFOS</h2>
-		
-				<section class="empty__container" id="noGif_container">
-					<img class="empty__image" src="assets/icon-mis-gifos-sin-contenido.svg" alt="Imagen decorativa">
-					<h3 class="empty__text">¡Anímate a crear tu primer GIFO!</h3>
-				</section>
-		
-				<div class="searchResult">
-					<div class="searchResult__gallery" id="misGifos-container">
-						
-					</div>
-				</div>
-		
-			</section> -->
 			<!-- FINISH MI GIFOS SECTION -->
 
 			<!-- STARTS TRENDING GIFS SECTION -->
@@ -393,5 +375,6 @@
 		<script src="https://www.WebRTC-Experiment.com/RecordRTC.js"></script>
 		<script src="script/variables.js"></script>
 		<script src="script/main.js"></script>
+		<!-- <script src="script/darkMode.js"></script> -->
 	</body>
 </html>
