Arreglo funcionalidad max gifs

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 				<img src="assets/mobile/icon-mis-gifos.svg" alt="mi gifos icon" />
 				<h2 class="miGifos__title">Mis GIFOS</h2>
 				<div class="miGifos__empty hidden" id="miGifos__empty">
-					<img src="assets/mobile/icon-mis-gifos-sin-contenido.svg" alt="icon mi gifos">
+					<img class="miGifos__empty__img" src="assets/mobile/icon-mis-gifos-sin-contenido.svg" alt="icon mi gifos">
 					<h3>¡Anímate a crear tu primer GIFO!</h3>
 				</div>
 				<div class="miGifos__gifs">
