Agrego dark mode

--- a/index.html
+++ b/index.html
@@ -374,6 +374,7 @@
 		<!-- SCRIPTS -->
 		<script src="https://www.WebRTC-Experiment.com/RecordRTC.js"></script>
 		<script src="script/variables.js"></script>
+		<script src="script/darkMode.js"></script>
 		<script src="script/main.js"></script>
 		<!-- <script src="script/darkMode.js"></script> -->
 	</body>
